2013-12-11  Albert Chu <chu11@llnl.gov>

	* ipmi-config/: Re-work error message outputs so fatal error
	messages are always output.
	
2013-12-11  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/util/ipmi-sensor-util.c (ipmi_sensor_decode_raw_value):
	Fix error in input checks.
	
2013-12-11  Albert Chu <chu11@llnl.gov>

	* ipmi-config/ipmi-config-category-sensors-threshold-section.c:
	Fix error message cut & paste typo.
	
2013-12-05  Albert Chu <chu11@llnl.gov>

	* ipmiseld/ipmiseld.c: Fix error message typo.
	
2013-12-02  Albert Chu <chu11@llnl.gov>

	* freeipmi.spec.in: Add forgotten manpage.
	
2013-12-02  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-faq.txi: Update with new information on OS issues.

2013-12-02  Albert Chu <chu11@llnl.gov>

	* bmc-watchdog/bmc-watchdog.c (_fiid_obj_get_safe): New function. 

	* bmc-watchdog/bmc-watchdog.c (_get_watchdog_timer_cmd): Use
	_fiid_obj_get_safe and do not exit on data not available errors.
	
2013-11-26  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-faq.txi: Update with new information.
	
2013-11-14  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/sdr/ipmi-sdr-cache-create.c (ipmi_sdr_cache_create):
	Fix bug w/ Fujitsu SDR count workaround.
	
2013-11-14  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/, libipmiconsole/: Support solchannelsupport
	workaround option /
	IPMICONSOLE_WORKAROUND_SKIP_CHANNEL_PAYLOAD_SUPPORT workaround
	flag.
	
2013-11-13  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-bugs-issues-and-workarounds.txt,
	man/manpage-common-workaround-outofband-15-text.man: Document
	workaround for Quanta Winterfell.
	
2013-11-13  Albert Chu <chu11@llnl.gov>

	Update with Errata 5 changes to IPMI 2.0 spec.

	* libfreeipmi/cmds/ipmi-pef-and-alerting-cmds.c,
	libfreeipmi/include/freeipmi/templates/ipmi-pef-and-alerting-cmds-templates.h,
	ipmi-config/ipmi-config-category-pef-alert-string.c:
	Filter numbers are now 8 bit fields instead of 7 bit fields.

	* libfreeipmi/util/ipmi-cipher-suite-util.c,